new readme, formatted todo, first release and new version

--- a/WatchedFilmsTracker.csproj
+++ b/WatchedFilmsTracker.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0-windows10.0.17763.0</TargetFramework>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Assets\Icons\icon2.ico</ApplicationIcon>
+    <StartupObject>WatchedFilmsTracker.App</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
