--- a/App.config
+++ b/App.config
@@ -16,6 +16,18 @@
             <setting name="LastPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="WindowLeft" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowTop" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowHeight" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="WindowWidth" serializeAs="String">
+                <value>0</value>
+            </setting>
         </WatchedFilmsTracker.Properties.Settings>
     </userSettings>
 </configuration>
