inotify, statistics, many fixes

--- a/App.config
+++ b/App.config
@@ -14,19 +14,19 @@
                 <value>True</value>
             </setting>
             <setting name="LastPath" serializeAs="String">
-                <value />
+                <value>MyFilms.csv</value>
             </setting>
             <setting name="WindowLeft" serializeAs="String">
-                <value>0</value>
+                <value>45</value>
             </setting>
             <setting name="WindowTop" serializeAs="String">
-                <value>0</value>
+                <value>45</value>
             </setting>
             <setting name="WindowHeight" serializeAs="String">
-                <value>0</value>
+                <value>500</value>
             </setting>
             <setting name="WindowWidth" serializeAs="String">
-                <value>0</value>
+                <value>700</value>
             </setting>
         </WatchedFilmsTracker.Properties.Settings>
     </userSettings>
