--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -9,19 +9,19 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="LastPath" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">MyFilms.csv</Value>
     </Setting>
     <Setting Name="WindowLeft" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">45</Value>
     </Setting>
     <Setting Name="WindowTop" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">45</Value>
     </Setting>
     <Setting Name="WindowHeight" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">500</Value>
     </Setting>
     <Setting Name="WindowWidth" Type="System.Double" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">700</Value>
     </Setting>
   </Settings>
 </SettingsFile>
