WIP update info, renameing files etc, auto check update, todo list

--- a/App.config
+++ b/App.config
@@ -28,6 +28,9 @@
             <setting name="WindowWidth" serializeAs="String">
                 <value>700</value>
             </setting>
+            <setting name="CheckUpdateOnStartup" serializeAs="String">
+                <value>False</value>
+            </setting>
         </WatchedFilmsTracker.Properties.Settings>
     </userSettings>
 </configuration>
