last record button

--- a/App.config
+++ b/App.config
@@ -31,6 +31,9 @@
             <setting name="CheckUpdateOnStartup" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ScrollLastPosition" serializeAs="String">
+                <value>True</value>
+            </setting>
         </WatchedFilmsTracker.Properties.Settings>
     </userSettings>
 </configuration>
