--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="CheckUpdateOnStartup" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ScrollLastPosition" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
