updated revert changes behaviour on new file

--- a/App.config
+++ b/App.config
@@ -14,7 +14,7 @@
                 <value>True</value>
             </setting>
             <setting name="LastPath" serializeAs="String">
-                <value>MyFilms.csv</value>
+                <value />
             </setting>
             <setting name="WindowLeft" serializeAs="String">
                 <value>45</value>
