--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="LastPath" Type="System.String" Scope="User">
-      <Value Profile="(Default)">MyFilms.csv</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="WindowLeft" Type="System.Double" Scope="User">
       <Value Profile="(Default)">45</Value>
