--- a/WatchedFilmsTracker.csproj
+++ b/WatchedFilmsTracker.csproj
@@ -34,6 +34,7 @@
     <None Remove="Assets\ButtonIcons\saveAs2.png" />
     <None Remove="Assets\ButtonIcons\saveChanges.png" />
     <None Remove="Assets\ButtonIcons\saveLocally.png" />
+    <None Remove="Assets\ButtonIcons\search.png" />
     <None Remove="Assets\ButtonIcons\selectLast.png" />
     <None Remove="Assets\ButtonIcons\selectLast2.png" />
     <None Remove="Assets\openContainingFolder.png" />
@@ -59,6 +60,7 @@
     <Resource Include="Assets\ButtonIcons\icon2.png" />
     <Resource Include="Assets\ButtonIcons\icon_old.png" />
     <Resource Include="Assets\ButtonIcons\loadLocally.png" />
+    <Resource Include="Assets\ButtonIcons\search.png" />
     <Resource Include="Assets\DialogIcons\moveFile.png" />
     <Resource Include="Assets\ButtonIcons\newFile.png" />
     <Resource Include="Assets\ButtonIcons\newVersion.png" />
