added context menu actions, moved collection actions like delete to collectionOfFilms class

--- a/WatchedFilmsTracker.csproj
+++ b/WatchedFilmsTracker.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\ButtonIcons\searchInternetForFilm.png" />
+  </ItemGroup>
+
+  <ItemGroup>
         <Content Include="Assets\ProgramIcon\icon2.ico" />
   </ItemGroup>
 
@@ -31,6 +35,7 @@
     <Resource Include="Assets\ButtonIcons\icon_old.png" />
     <Resource Include="Assets\ButtonIcons\loadLocally.png" />
     <Resource Include="Assets\ButtonIcons\search.png" />
+    <Resource Include="Assets\ButtonIcons\searchInternetForFilm.png" />
     <Resource Include="Assets\ButtonIcons\x.png" />
     <Resource Include="Assets\DialogIcons\moveFile.png" />
     <Resource Include="Assets\ButtonIcons\newFile.png" />
