--- a/WatchedFilmsTracker.csproj
+++ b/WatchedFilmsTracker.csproj
@@ -16,6 +16,9 @@
     <None Remove="Assets\ButtonIcons\addColumn.png" />
     <None Remove="Assets\ButtonIcons\removeColumn.png" />
     <None Remove="Assets\ButtonIcons\searchInternetForFilm.png" />
+    <None Remove="Assets\TabIcons\books.png" />
+    <None Remove="Assets\TabIcons\films.png" />
+    <None Remove="Assets\TabIcons\tv.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -56,6 +59,9 @@
     <Resource Include="Assets\ButtonIcons\selectLast.png" />
     <Resource Include="Assets\ButtonIcons\selectLast2.png" />
     <Resource Include="Assets\ButtonIcons\openContainingFolder.png" />
+    <Resource Include="Assets\TabIcons\books.png" />
+    <Resource Include="Assets\TabIcons\films.png" />
+    <Resource Include="Assets\TabIcons\tv.png" />
   </ItemGroup>
 
   <ItemGroup>
