--- a/WatchedFilmsTracker.csproj
+++ b/WatchedFilmsTracker.csproj
@@ -15,9 +15,13 @@
   <ItemGroup>
     <None Remove="Assets\ButtonIcons\addColumn.png" />
     <None Remove="Assets\ButtonIcons\removeColumn.png" />
+    <None Remove="Assets\ButtonIcons\renameColumn.png" />
     <None Remove="Assets\ButtonIcons\searchInternetForFilm.png" />
     <None Remove="Assets\TabIcons\books.png" />
+    <None Remove="Assets\TabIcons\comics.png" />
+    <None Remove="Assets\TabIcons\custom.png" />
     <None Remove="Assets\TabIcons\films.png" />
+    <None Remove="Assets\TabIcons\games.png" />
     <None Remove="Assets\TabIcons\tv.png" />
   </ItemGroup>
 
@@ -41,6 +45,7 @@
     <Resource Include="Assets\ButtonIcons\icon_old.png" />
     <Resource Include="Assets\ButtonIcons\loadLocally.png" />
     <Resource Include="Assets\ButtonIcons\removeColumn.png" />
+    <Resource Include="Assets\ButtonIcons\renameColumn.png" />
     <Resource Include="Assets\ButtonIcons\search.png" />
     <Resource Include="Assets\ButtonIcons\searchInternetForFilm.png" />
     <Resource Include="Assets\ButtonIcons\x.png" />
@@ -60,7 +65,10 @@
     <Resource Include="Assets\ButtonIcons\selectLast2.png" />
     <Resource Include="Assets\ButtonIcons\openContainingFolder.png" />
     <Resource Include="Assets\TabIcons\books.png" />
+    <Resource Include="Assets\TabIcons\comics.png" />
+    <Resource Include="Assets\TabIcons\custom.png" />
     <Resource Include="Assets\TabIcons\films.png" />
+    <Resource Include="Assets\TabIcons\games.png" />
     <Resource Include="Assets\TabIcons\tv.png" />
   </ItemGroup>
 
